fixing vsix pkg bug

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,9 @@
 .vscode/**
 .vscode-test/**
-out/**
+out/test/**
+out/**/*.map
 src/**
 .gitignore
-.yarnrc
+tsconfig.json
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
-node_modules
-**/node_modules
-**/src/**
+tslint.json
