--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"name": "featomic",
 	"displayName": "featomic",
 	"description": "a front-end tool for dev",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"icon": "images/logo.png",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jsbest/vscode-featomic.git"
+	},
 	"publisher": "yhpnoraa",
 	"galleryBanner": {
 		"color": "#000000",
@@ -15,6 +19,9 @@
 	"categories": [
 		"Other"
 	],
+	"contributes": {
+		"commands": []
+	},
 	"activationEvents": [
 		"workspaceContains:**/{.ferc}.{js}"
 	],
